# uclaw-new

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  BEHAVIOR.md  CLAUDE.md  CONTEXT.md  Cargo.toml  NOTICE  autonomous-execution-log.md  autonomous-execution-summary.md  uclaw-codex-comparison-and-design.md  uclaw-upgrade-implementation-plan.md
crates/uclaw-protocol-types/: Cargo.toml
crates/uclaw-protocol-types/src/: lib.rs  protocol_tests.rs
crates/uclaw-utils-absolute-path/: Cargo.toml
crates/uclaw-utils-absolute-path/src/: absolutize.rs  lib.rs
crates/uclaw-utils-async-utils/: Cargo.toml
crates/uclaw-utils-async-utils/src/: lib.rs
crates/uclaw-utils-cache/: Cargo.toml
crates/uclaw-utils-cache/src/: lib.rs
crates/uclaw-utils-file-watcher/: Cargo.toml
crates/uclaw-utils-file-watcher/src/: file_watcher_tests.rs  lib.rs
crates/uclaw-utils-image/: Cargo.toml
crates/uclaw-utils-image/src/: error.rs  lib.rs
crates/uclaw-utils-path-utils/: Cargo.toml
crates/uclaw-utils-path-utils/src/: env.rs  lib.rs  path_utils_tests.rs
crates/uclaw-utils-readiness/: Cargo.toml
crates/uclaw-utils-readiness/src/: lib.rs
crates/uclaw-utils-sleep-inhibitor/: Cargo.toml
crates/uclaw-utils-sleep-inhibitor/src/: dummy.rs  iokit_bindings.rs  lib.rs  linux_inhibitor.rs  macos.rs  windows_inhibitor.rs
crates/uclaw-utils-terminal-detection/: Cargo.toml
crates/uclaw-utils-terminal-detection/src/: lib.rs  terminal_tests.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  pyembed  tauri.conf.json
src-tauri/.playwright-mcp/: page-2026-05-26T02-05-47-501Z.yml  page-2026-05-26T05-07-17-293Z.yml  page-2026-05-26T05-23-40-210Z.yml  page-2026-05-26T05-27-42-743Z.yml  page-2026-05-26T05-28-47-780Z.yml
src-tauri/capabilities/: default.json
src-tauri/examples/echo_plugin/: main.rs  plugin.toml
src-tauri/resources/: memory_schema.json
src-tauri/resources/automation-specs/: bilibili-comment-auto-reply.yaml  douyin-live-moderator.yaml
src-tauri/resources/builtin-automations/: manifest.json
src-tauri/src/: app.rs  background.rs  channels.rs  cost_store.rs  error.rs  ipc.rs  lib.rs  main.rs  mcp.rs  memory.rs  memubot_config.rs  notifications.rs  settings.rs  skills.rs  skills_manifest.rs  tauri_commands.rs  tauri_commands_git.rs
src-tauri/src/agent/: agentic_loop.rs  anchor_state.rs  baseline_blocks.rs  cancellation_registry.rs  code_checkpoint.rs  code_rescue.rs  compaction.rs  dispatcher.rs  file_ops.rs  gbrain_prompt.rs  harness.rs  headless.rs  heartbeat.rs  history_window.rs  interrupts.rs  interrupts_tests.rs  llm_stream.rs  memory_recall_block.rs  mod.rs  mode_prompts.rs  mode_suggest.rs  mode_suggest_store.rs  plan_state.rs  queues.rs  recovery.rs  regular_task.rs  regular_task_pr4_tests.rs  rollout_integration.rs  rule_context_builder.rs  run_assembly.rs  session.rs  session_runner.rs  session_tree.rs  skeleton.rs  tool_families.rs  tool_families_tests.rs  turn.rs  types.rs
src-tauri/src/api/: auth.rs  mod.rs  router.rs  ws.rs
src-tauri/src/automation/: activity.rs  ambient_mapping.rs  ambient_mapping_tests.rs  builtin_apps.rs  capability_map.rs  compat.rs  filters.rs  manager.rs  mod.rs  permissions.rs  rollout_bridge.rs  runtime.rs  service.rs  spec.rs
src-tauri/src/browser/: action.rs  action_registry.rs  agent_loop.rs  boundary.rs  context.rs  context_manager.rs  decision.rs  dom_state.rs  hosted_provider.rs  identity_authorization.rs  identity_ipc.rs  identity_tasks.rs  intervention_bridge.rs  local_chromium_adapter.rs  loop_detector.rs  memory_adapter.rs  mod.rs  observation.rs  playwright_cli.rs  playwright_cli_adapter.rs  playwright_cli_adapter_tests.rs  playwright_discovery.rs  playwright_discovery_tests.rs  playwright_mcp.rs  playwright_mcp_adapter.rs  playwright_mcp_adapter_tests.rs  playwright_mcp_sidecar.rs  playwright_setup.rs  playwright_setup_tests.rs  playwright_skills.rs  playwright_skills_tests.rs  provider.rs  provider_defaults.rs  provider_execution.rs  provider_execution_tests.rs  provider_tests.rs  recipes.rs  recovery.rs  rollout_bridge.rs  rollout_bridge_tests.rs  (+20 more)
src-tauri/src/channels/: dispatcher.rs  manager.rs  mod.rs  session_registry.rs  types.rs
src-tauri/src/config/: builder.rs  llm.rs  mod.rs
src-tauri/src/db/: manager.rs  migrations.rs  mod.rs
src-tauri/src/eval/: artifacts.rs  campaign.rs  campaign_tests.rs  case.rs  episode.rs  evidence.rs  evidence_gate.rs  graders.rs  mod.rs  performance_scorecard.rs  performance_scorecard_tests.rs  runtime.rs  trace.rs
src-tauri/src/files_rail/: commands.rs  ignore.rs  mod.rs  service.rs  types.rs  walker.rs  watcher.rs
src-tauri/src/gbrain/: browse.rs  chat_extractor.rs  cli_format.rs  mod.rs  scoped.rs
src-tauri/src/git/: branch.rs  command.rs  commit.rs  error.rs  mod.rs  repo.rs  status.rs  test_support.rs
src-tauri/src/harness/: artifacts.rs  budget.rs  campaign.rs  campaign_tests.rs  case.rs  episode.rs  graders.rs  memory_inventory.rs  mod.rs  performance_scorecard.rs  performance_scorecard_tests.rs  runtime.rs  self_improvement.rs  trace.rs  trajectory.rs
src-tauri/src/im_channels/: mod.rs  types.rs
src-tauri/src/infra/: mod.rs  service.rs  types.rs
src-tauri/src/ingestion/: chunk.rs  extract.rs  job.rs  merge.rs  mod.rs
src-tauri/src/intent_classifier/: classify.rs  mod.rs
src-tauri/src/learning/: cache.rs  candidate.rs  extractor.rs  mod.rs  prompt_section.rs  scheduler.rs  stability_detector.rs
src-tauri/src/llm/: mod.rs  prewarm.rs  provider.rs  provider_stream.rs  stream_error.rs
src-tauri/src/local_api/: mod.rs  routes.rs  server.rs
src-tauri/src/mcp_server/: mod.rs  types.rs
src-tauri/src/memorization/: mod.rs  service.rs  storage.rs  types.rs  watcher.rs
src-tauri/src/memory_adapter/: edges.rs  gbrain.rs  gbrain_page_migration.rs  legacy_kv.rs  legacy_steward.rs  memu.rs  mod.rs  page_dual_write.rs  pages.rs  router.rs  skills.rs  tests.rs  traits.rs  types.rs
src-tauri/src/memory_bucket_seal/: adapter.rs  atomic.rs  chunker.rs  entities.rs  mod.rs  paths.rs  store.rs  (+2 more)
src-tauri/tests/: c1_5_bench.rs  context_wireup_bench.rs
(+1961 files in other folders)
