[package]
name = "uclaw"
version = "0.1.0"
edition = "2021"
description = "AI-powered desktop coworker — uClaw"

[lib]
name = "uclaw_core"
path = "src/lib.rs"

[[bin]]
name = "uclaw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Configuration
dotenvy = "0.15"
toml = "0.8"

# HTTP server for remote access
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic", "fs"] }

# Multi-provider LLM support
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

# Desktop (Tauri)
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Cryptography for secrets
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
jsonwebtoken = "9"

# URL
url = "2"

# Filesystem
dirs = "6"

# YAML for SKILL.md
serde_yml = "0.0.12"

# Regex for grep tool
regex = "1"

# Diff for edit tool
similar = "2"

# Filesystem locks
fs4 = "0.6"

# File watching
notify = { version = "7", features = ["macos_kqueue"] }

# Browser automation (Phase 3)
chromiumoxide = { version = "0.9" }

# Cron scheduling
cron = "0.12"

# Base64 encoding
base64 = "0.22"

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSView", "NSWindow"] }

# PTY for terminal
[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.5", features = ["async"] }

[dev-dependencies]
tempfile = "3"
tauri = { version = "2.0.0", features = ["test"] }

[features]
default = []

# Updater plugin — desktop only (not Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
strip = true
