[package]
name        = "uclaw"
version     = "0.1.0"
description = "AI-powered desktop coworker — uClaw"
# Inherit from the workspace root (uclaw-upgrade-implementation-plan.md §18 / Phase 0.5-T2).
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
name = "uclaw_core"
path = "src/lib.rs"

[[bin]]
name = "uclaw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Phase 0.5-T6 — canonical resolver for ~/.uclaw (sweep target)
uclaw-utils-home = { path = "../crates/uclaw-utils-home", version = "0.1" }
# M1-T2a — OrCancelExt for cancellation-aware async
uclaw-utils-async-utils = { path = "../crates/uclaw-utils-async-utils", version = "0.1" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# HTTP client
# gzip/brotli/deflate features: many real-world sites (yahoo finance,
# cloudflare-fronted endpoints, etc.) negotiate compressed responses
# regardless of whether we advertise Accept-Encoding. Without these
# features reqwest hands us the raw compressed bytes; .text() then
# lossy-decodes binary as UTF-8 and downstream code panics on byte
# slicing in the middle of "characters" that don't exist.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream", "gzip", "brotli", "deflate"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
bytes = "1"

# Email (SMTP transport)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }

# STT — local SenseVoice ONNX (vendored from if2Ai openflow)
# 默认 features 含 download-binaries：cargo build 自动下载对应 target 的
# onnxruntime tarball 并静态链接进 binary。运行时零 dlopen / 零 ORT_DYLIB_PATH /
# 零版本号维护。首次 build 多 ~30s + 最终 binary 多 ~30MB，换永远不再为
# onnxruntime 版本对应关系 panic（详见 PR #156 的事故说明）。
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "half"] }
realfft = "3"
ndarray = "0.16"
half = "2"
once_cell = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Filesystem traversal for the @-mention file lookup IPC
walkdir = "2"

# HTTP server for remote access
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic", "fs"] }

# Multi-provider LLM support
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

# Desktop (Tauri)
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

# Clipboard access (system-level, no window needed)
arboard = "3"

# Cryptography for secrets
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
lru = "0.12"
secrecy = { version = "0.10", features = ["serde"] }
jsonwebtoken = "9"

# URL
url = "2"

# Filesystem
dirs = "6"

# YAML for SKILL.md
serde_yml = "0.0.12"

# Validation (Humane automation schema)
garde = { version = "0.20", features = ["derive", "pattern", "serde", "url"] }
# File-source pattern matching (Humane Phase 1 Task 16)
globset = "0.4"

# Regex for grep tool
regex = "1"

# HTML parsing for web_fetch
scraper = "0.20"

# RSS feed parsing for automation sources
rss = "2"

# Diff for edit tool
similar = "2"

# Filesystem locks
fs4 = "0.6"

# File watching.
# macOS default backend is FSEvents (Apple-native, coalesces events
# intelligently, well-maintained upstream). We previously opted in to the
# `macos_kqueue` feature, which routes the macOS backend through the
# `kqueue` crate — that crate has an unwrap panic at kqueue-1.1.1
# lib.rs:661:86 that surfaced as a notify-rs thread death in production.
# Switching back to the default eliminates the panic at the source.
notify = { version = "7" }

# Browser automation (Phase 3)
chromiumoxide = { version = "0.9" }

# Cron scheduling
cron = "0.12"

# Base64 encoding
base64 = "0.22"

# System info (process RSS, CPU, uptime) for Diagnostics tab
sysinfo = { version = "0.31", default-features = false, features = ["system"] }

# URL encoding for DingTalk signature
urlencoding = "2"

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSView", "NSWindow"] }

# File operations
tempfile = "3"

# PTY for terminal
[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.5", features = ["async"] }

[dev-dependencies]
tauri = { version = "2.11", features = ["test"] }
tempfile = "3"
mockito = "0.32"

[features]
default = []

# Updater plugin — desktop only (not Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

