[package]
name = "uclaw-utils-image"
version = "0.1.0"
edition = "2024"
license.workspace = true


[dependencies]
base64 = "0.22"
image = "0.25"
uclaw-utils-cache = { path = "../uclaw-utils-cache", version = "0.1" }
mime_guess = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "fs", "io-util"] }

[dev-dependencies]
image = "0.25"

[lib]
doctest = false
