[package]
name = "uclaw-utils-readiness"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "fs", "io-util"] }

[dev-dependencies]
assert_matches = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "fs", "io-util"] }


[lib]
doctest = false
