[package]
name = "uclaw-utils-sleep-inhibitor"
version = "0.1.0"
edition = "2024"
license.workspace = true


[dependencies]
tracing = { version = "0.1", features = ["log"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[lib]
doctest = false
